--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "sass": "^1.57.1",
     "scss": "^0.2.4",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/react-transition-group": "^4.4.5"
   }
 }
