--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.0",
     "@types/react-transition-group": "^4.4.5"
   }
 }
