--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "firebase": "^9.17.1",
+    "firebase-admin": "^11.5.0",
     "next": "13.1.1",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
