--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@react-spring/web": "^9.7.1",
     "@reduxjs/toolkit": "^1.9.2",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
@@ -18,11 +19,14 @@
     "eslint-config-next": "13.1.1",
     "firebase": "^9.17.1",
     "firebase-admin": "^11.5.0",
+    "imagemin-mozjpeg": "^10.0.0",
     "next": "13.1.1",
+    "next-optimized-images": "^2.6.2",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.2",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "sass": "^1.57.1",
