--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
+    "react-spring": "^9.7.1",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "sass": "^1.57.1",
