--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.1.1",
     "firebase": "^9.17.1",
     "firebase-admin": "^11.5.0",
+    "gsap": "^3.11.4",
     "imagemin-mozjpeg": "^10.0.0",
     "next": "13.1.1",
     "next-optimized-images": "^2.6.2",
